# health-ai-system

./: .dockerignore  .env.example  CLAUDE.md  Makefile  docker-compose.yml
.claude/: settings.json
_common/models/: analysis.py  appointment.py  complaint.py  device.py  visit.py
_common/schemas/: gp_consultation.py  specialist_finding.py
backend/: CLAUDE.md
backend/_common/: CLAUDE.md
backend/example-microservice/: CLAUDE.md
backend/gateway/: Dockerfile  Makefile  config.py  example.env  main.py  pyproject.toml
backend/gateway/routers/: analyses_router.py  appointments_router.py  complaints_router.py  consilium_router.py  devices_router.py  diagnosis_router.py  history_router.py  patient_history_router.py  patients_router.py  visits_router.py
backend/gateway/schemas/: analysis_schema.py  appointment_schema.py  complaint_schema.py  consilium_schema.py  device_schema.py  diagnosis_schema.py  patient_history_schema.py  patient_schema.py  visit_schema.py
backend/gateway/services/: agent_result.py  analysis_service.py  appointment_service.py  complaint_service.py  consilium_service.py  device_service.py  exceptions.py  gp_service.py  patient_history_service.py  patient_service.py  visit_doctor_service.py
backend/user_microservice/: Dockerfile  Makefile  config.py  example.env  main.py  pyproject.toml
backend/user_microservice/db/: engine.py  models.py
backend/user_microservice/routers/: patients_router.py
backend/user_microservice/schemas/: patient_schema.py
backend/user_microservice/services/: patient_service.py
frontend/: .dockerignore  CLAUDE.md  Dockerfile  Makefile  package.json  pnpm-lock.yaml
frontend/app/: CLAUDE.md  layout.tsx
frontend/components/: CLAUDE.md
frontend/hooks/: useMobileDetect.ts
frontend/services/: AnalysisService.ts  AppointmentService.ts  CLAUDE.md  ComplaintService.ts  ConsiliumService.ts  DeviceService.ts  DiagnosisService.ts  PatientHistoryService.ts  PatientService.ts  VisitService.ts
frontend/stores/: CLAUDE.md  useAnalysisStore.ts  useAppointmentStore.ts  useComplaintStore.ts  useConsiliumStore.ts  useDeviceStore.ts  useDiagnosisStore.ts  usePatientHistoryStore.ts  usePatientStore.ts  useVisitStore.ts
frontend/types/: CLAUDE.md  analysis.d.ts  appointment.d.ts  complaint.d.ts  consilium.d.ts  device.d.ts  diagnosis.d.ts  patient.d.ts  patient_history.d.ts  user.d.ts  visit.d.ts
frontend/utils/: CLAUDE.md  cx.ts  formatDate.ts
mcp-agents/: CLAUDE.md
mcp-agents/apple_health_agent/: Dockerfile  Makefile  config.py  example.env  main.py
mcp-agents/appointment_scheduler_agent/: Dockerfile  Makefile  config.py  example.env  main.py  pyproject.toml
mcp-agents/appointment_scheduler_agent/db/: init.py  models.py
mcp-agents/appointment_scheduler_agent/schemas/: appointment.py
mcp-agents/appointment_scheduler_agent/tools/: create_appointment.py  get_appointments.py
mcp-agents/client_history_agent/: config.py  main.py
mcp-agents/complaint_manager_agent/: Dockerfile  Makefile  config.py  example.env  main.py  pyproject.toml
mcp-agents/complaint_manager_agent/db/: models.py
mcp-agents/complaint_manager_agent/schemas/: complaint.py
mcp-agents/complaint_manager_agent/tools/: create_complaints_from_prompt.py  delete_complaint.py  get_complaints.py  mark_as_read.py  upsert_complaint.py
mcp-agents/device_orchestrator_agent/: Makefile  config.py  example.env  main.py  pyproject.toml
mcp-agents/devices_agent/: Dockerfile  config.py  example.env
mcp-agents/doctors_agent/: Dockerfile  Makefile  README.md  config.py  example.env  main.py  pyproject.toml
mcp-agents/doctors_agent/prompts/: gastroenterology.md  mental_health.md  nephrology.md  nutrition.md
mcp-agents/doctors_agent/schemas/: consilium.py  http.py
mcp-agents/doctors_agent/services/: consilium_service.py  history_client.py
mcp-agents/gp_synthesis_agent/: Dockerfile  Makefile  config.py  example.env  main.py
mcp-agents/labs_agent/: Dockerfile  config.py  example.env  main.py  pyproject.toml
mcp-agents/labs_agent/db/: models.py
mcp-agents/labs_agent/schemas/: analysis.py  http.py
mcp-agents/labs_agent/tools/: add_patient_analysis.py  create_analyses_from_prompt.py  get_patient_analyses.py  update_analysis.py
mcp-agents/master_orchestrator_agent/: Dockerfile  Makefile  config.py  example.env  main.py  pyproject.toml
mcp-agents/master_orchestrator_agent/chains/: consilium_chain.py  gp_diagnosis_chain.py
mcp-agents/master_orchestrator_agent/graph/: nodes.py  state.py  workflow.py
mcp-agents/master_orchestrator_agent/nodes/: fetch_all_data.py  run_consilium.py  run_gp_synthesis.py
mcp-agents/master_orchestrator_agent/schemas/: http.py  state.py
mcp-agents/master_orchestrator_agent/tools/: run_comprehensive_evaluation.py  run_gp_diagnosis.py
mcp-agents/medical_consilium_agent/: .gitignore  Makefile  main.py  (+2 more)
mcp-agents/patient-analysis-mcp-agent/: Makefile  config.py  main.py  pyproject.toml
mcp-agents/patient-analysis-mcp-agent/db/: engine.py  models.py
mcp-agents/patient-analysis-mcp-agent/schemas/: analysis.py  http.py
mcp-agents/patient-analysis-mcp-agent/tools/: add_patient_analysis.py  delete_analysis.py  get_patient_analyses.py
mcp-agents/visit_doctor_agent/: Makefile  README.md  config.py  example.env  main.py  pyproject.toml
mcp-agents/visit_doctor_agent/db/: models.py
mcp-agents/visit_doctor_agent/schemas/: http.py  visit.py
mcp-agents/visit_doctor_agent/seeds/: seed_clinical_history.py
mcp-agents/visit_doctor_agent/tools/: add_visit_doctor.py  get_doctor_visits_history.py
(+118 files in other folders)
