[project]
name = "labs-agent"
version = "0.1.0"
description = "MCP agent that records and retrieves patient laboratory test results using PostgreSQL."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "loguru>=0.7.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
]

[project.scripts]
labs_agent = "main:run"
inspector = "main:run_inspector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
