[project]
name = "master-orchestrator-agent"
version = "0.1.0"
description = "LangGraph orchestrator that coordinates parallel data fetching and MDT consilium evaluation."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "loguru>=0.7.0",
]

[project.scripts]
master_orchestrator_agent = "main:run"
inspector = "main:run_inspector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
