[project]
name = "visit-doctor-mcp-agent"
version = "0.1.0"
description = "MCP agent that records and retrieves specialist consultations in SOAP format using PostgreSQL."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "loguru>=0.7.0",
]

[project.scripts]
visit_doctor_agent = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
